# mal

./: Makefile
mine/: Cargo.toml  Makefile  builtins.mal  core.rs  env.rs  macros.rs  main.rs  printer.rs  reader.rs  run  step0_repl.rs  step1_read_print.rs  step2_eval.rs  step3_env.rs  step4_if_fn_do.rs  step5_tco.rs  step6_file.rs  types.rs
