[package]
name = "mine"
version = "0.1.0"
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
regex = "1.1.2"

[[bin]]
name = "step0_repl"
path = "step0_repl.rs"

[[bin]]
name = "step1_read_print"
path = "step1_read_print.rs"

[[bin]]
name = "step2_eval"
path = "step2_eval.rs"

[[bin]]
name = "step3_env"
path = "step3_env.rs"
